Fixing menu animation on mobile, footer responsiveness

--- a/src/components/Footer.sass
+++ b/src/components/Footer.sass
@@ -138,5 +138,16 @@ footer
       display: flex
       justify-content: space-between
 
+@media (max-width: 1280px)
+
+  footer
+    padding-top: 64px
+    padding-bottom: 64px
+
+  .footer-container
+    width: auto
+    max-width: unset
+    margin: 40px
+
 
 
