--- a/src/components/Header.sass
+++ b/src/components/Header.sass
@@ -1,7 +1,24 @@
 @import "../styles/bulma/utilities/_all"
 
 .menu-button
+  cursor: pointer
   display: none
+
+  .bar1, .bar2, .bar3 
+    width: 24px
+    height: 2px
+    background-color: #ffffff
+    margin: 6px 0
+    transition: 0.2s
+
+  .change .bar1
+    transform: rotate(-45deg) translate(-9px, 6px)
+
+  .change .bar2
+    opacity: 0
+
+  .change .bar3
+    transform: rotate(45deg) translate(-8px, 8px)
 
   +mobile 
     display: unset
@@ -18,14 +35,6 @@
   padding: 20px
   +mobile
     height: 80px
-    
-.nav__submenu 
-  display: none
-
-.nav__menu-item:hover 
-  .nav__submenu 
-    display: flex
-    justify-content: center
   
 $submenu-width: 100vw
 
@@ -70,9 +79,6 @@ nav
 
   &:hover 
     color: #fff
-
-    .nav__submenu 
-      display: flex
     
 .nav__submenu 
   font-weight: 300
