--- a/src/pages/community.sass
+++ b/src/pages/community.sass
@@ -99,6 +99,24 @@
       letter-spacing: 0.5px
       cursor: pointer
 
+  @media (max-width: 1300px)
+    .subscribe-section
+      height: auto
+
+      .sub-inputs
+        display: block
+        max-width: 80vw
+
+        .input-field
+          width: 80vw
+          margin: auto
+        
+        .input-button
+          .subscribe-button
+            width: 80vw
+            margin: 16px auto
+  
+
   @media (max-width: 1087px)
     .main-content 
       padding: 64px
