--- a/src/pages/index.sass
+++ b/src/pages/index.sass
@@ -494,16 +494,20 @@
 
   @media (max-width: 1024px)
     .subscribe-section
+      height: auto
+
       .sub-inputs
-        justify-content: center
-        max-width: 900px
+        display: block
+        max-width: 80vw
 
         .input-field
-          width: 50%
+          width: 80vw
+          margin: auto
         
         .input-button
-          .purple-button
-            width: 50%
+          .subscribe-button
+            width: 80vw
+            margin: 16px auto
 
 
   @media (max-width: 786px)
@@ -561,22 +565,6 @@
             font-size: 32px
           .p3 
             font-size: 20px
-
-    .subscribe-section
-      height: auto
-
-      .sub-inputs
-        display: block
-        max-width: 80vw
-
-        .input-field
-          width: 80vw
-          margin: auto
-        
-        .input-button
-          .subscribe-button
-            width: 80vw
-            margin: 16px auto
 
   @media (max-width: 670px)
 
